<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            app:iconTint="@color/colorWhite"
            android:title="@string/title_you"/>

    <item
            android:id="@+id/navigation_family"
            android:icon="@drawable/ic_group_black_24dp"
            app:iconTint="@color/colorWhite"
            android:title="@string/title_family"/>

    <item
            android:id="@+id/navigation_community"
            android:icon="@drawable/ic_dashboard_black_24dp"
            app:iconTint="@color/colorWhite"
            android:title="@string/title_community"/>

</menu>
