<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:fab="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include layout="@layout/background_floral"/>

    <ImageView
            android:id="@+id/your_circle"
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/your_circle_crop"
    />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/family_options_recyclerview"
            android:layout_below="@id/your_circle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/multiple_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            fab:fab_addButtonColorNormal="@color/colorPrimaryDark"
            fab:fab_addButtonColorPressed="@color/colorPrimary"
            fab:fab_addButtonPlusIconColor="@color/colorWhite"
            fab:fab_labelStyle="@style/menu_labels_style"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp">

        <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorPrimary"
                fab:fab_title="@string/send_message"
                android:src="@drawable/ic_send_black_24dp"
                fab:fab_colorPressed="@color/colorPrimaryDark"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorPrimary"
                fab:fab_title="@string/share_mood"
                android:src="@drawable/ic_face_black_24dp"
                fab:fab_colorPressed="@color/colorPrimaryDark"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorPrimary"
                fab:fab_title="@string/share_calendar"
                android:src="@drawable/ic_event_note_black_24dp"
                fab:fab_colorPressed="@color/colorPrimaryDark"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorPrimary"
                fab:fab_title="@string/assign_role"
                android:src="@drawable/ic_person_add_black_24dp"
                fab:fab_colorPressed="@color/colorPrimaryDark"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>




</RelativeLayout>