<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!--
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_gravity="center_horizontal"
                  android:background="@drawable/rounded_corners_textview"
                  android:layout_marginEnd="32dp"
                  android:layout_marginStart="32dp"
                  android:layout_marginTop="32dp"
                  android:layout_marginBottom="32dp"

    >-->

    <androidx.cardview.widget.CardView
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        <LinearLayout android:layout_width="wrap_content"
                      android:orientation="vertical"
                      android:layout_height="wrap_content">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/daily_affirmation"
              android:paddingTop="8dp"
              android:paddingStart="8dp"
              android:paddingEnd="8dp"
              android:textColor="@color/colorWhite"
              android:text="@string/quote_placeholder"

    />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:id="@+id/author"
              android:layout_marginBottom="4dp"
              android:paddingStart="8dp"
              android:paddingEnd="8dp"
              android:textColor="@color/colorWhite"
              android:text="@string/author_name_placeholder"

    />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!--</LinearLayout>-->

    <!--
    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="102dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimaryDark"/>
            -->

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/feeling_question"
              android:layout_marginTop="24dp"
              android:layout_marginBottom="8dp"
              android:layout_marginStart="24dp"
              android:layout_marginEnd="24dp"
              android:text="@string/how_do_you_feel"
              android:textColor="@color/colorPrimaryDark"
              android:textSize="16sp"
              style="@style/PoppinsBold"

    />

    <SeekBar
            android:id="@+id/seekBar"
            android:max="100"
            android:progress="50"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:thumb="@drawable/ic_sentiment_neutral_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/journal"
              android:layout_marginStart="24dp"
              android:layout_marginEnd="24dp"
              android:layout_marginTop="8dp"
              android:layout_marginBottom="4dp"
              android:text="@string/journal"
              android:textColor="@color/colorPrimaryDark"
              android:textSize="16sp"
              style="@style/PoppinsBold"

    />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorWhite"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/journal_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_button"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorWhite"
            android:padding="8dp"
            android:text="@string/save"
            android:textAllCaps="true"
    />

</LinearLayout>
</androidx.core.widget.NestedScrollView>